# DeepDeepCube2

./: .gitignore  README.md  a_search_mix.py  beam_search.py  beam_search_mix.py  beam_search_mix_exp.py  beam_search_policy.py  bvertex_search.py  cube3_game.py  datasets.py  g_datasets.py  hyperparams.py  main.py  models.py  numba_path_finder.py  pruning_finetune.py  requirements.txt  start_kaggle_notebook.sh  trainer.py  trainer_cnn.py  trainer_simple.py  trainer_transformer.py  utils.py
assets/envs/: qtm_cube3.pickle
assets/lengths/: path_finder_solutions.pkl  scrambles_dict.pkl
assets/models/: Cube3ResnetModel.pt  Cube3ResnetModel_policy.pt  Cube3ResnetModel_value.pt  Cube3ResnetModel_value_policy.pt  Cube3ResnetModel_value_policy_2.pt  traced_Cube3ResnetModel.pt
assets/reports/: Cube3ResnetModel_value_policy_2_2B_800K_search_value.pkl  result_cb_on_deepcube.pickle  (+8 more)
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
cpp/: CMakeLists.txt  CMakeUserPresets.json  conanfile.txt  run.bat  run.sh  test_a_star.py
cpp/src/: catboost_a_star.h  catboost_parallel_a_star.h  cube3_game.h  heuristic_a_star.h  main.cpp  nodes.h  utils.h
kaggle_test/: kernel-metadata.json  notebook-kaggle-api.ipynb
notebooks/: RC3_v3_VP_mini.ipynb  beam_search.ipynb  check_a_star.ipynb  check_logic.ipynb  check_policy.ipynb  check_report.ipynb  check_solutions.ipynb  compare_solutions.ipynb  custom_loss.ipynb  extract_model.ipynb  generate_data.ipynb  prepare_cube_a_data.ipynb  quant_model.ipynb  torch_exp.ipynb
scripts/: generate_pair_lengths.py
(+18 files in other folders)
